just fix minimal overlapping background in the navbar

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -10,6 +10,7 @@
     position: relative;
     padding: 4rem 0;
     background: #191919;
+    margin-top: -20px;
 }
 
 .about-Content {
