--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -34,7 +34,6 @@
     align-items: center;
     gap: 0.5rem;
     font-size: 35px;
-    font-style: italic;
     font-weight: 700;
     color: #DDE6ED;
     text-decoration: none;
