--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -10,6 +10,7 @@
   color: white;
   text-align: center;
   position: relative;
+  margin-top: -20px;
 }
 
 .project-header::before {
